# rustored

./: .gitignore  Cargo.toml  DEVELOPER.md  DEVELOPERS.md  Dockerfile  LICENSE  README.md  TDD_GUIDELINES.md  UI_COMPONENTS.md
.github/workflows/: ci.yml  deploy-docs.yml  docker.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPERS.md  README.md  TDD_GUIDELINES.md  UI_COMPONENTS.md  _config.yml  architecture.md  code_diagram.md  index.md
docs/images/: ui_layout.txt
docs/targets/: elasticsearch.md  postgres.md  qdrant.md
docs/ui/: navigation.md
src/: backup.rs  cli.rs  config.rs  datastore.rs  lib.rs  main.rs  postgres.rs  restore.rs  tui.rs
src/restore/: elasticsearch.rs  postgres.rs  qdrant.rs
src/targets/: elasticsearch_target.rs  mod.rs  postgres_target.rs  qdrant_target.rs
src/ui/: app.rs  browser.rs  key_handler.rs  layouts.rs  mod.rs  models.rs  renderer.rs  restore_browser.rs  rustored.rs
tests/: browser_tests.rs  code_quality_tests.rs  password_masking_tests.rs  renderer_tests.rs  restore_browser_tests.rs  rustored_tests.rs  ui_navigation_tests.rs
tests/snapshots/: browser_tests__backup_metadata.snap  browser_tests__backup_metadata.snap.new  browser_tests__elasticsearch_config.snap  browser_tests__elasticsearch_config.snap.new  browser_tests__focus_field_access_key_id.snap  browser_tests__focus_field_bucket.snap  browser_tests__focus_field_endpoint_url.snap  browser_tests__focus_field_path_style.snap  browser_tests__focus_field_prefix.snap  browser_tests__focus_field_region.snap  browser_tests__focus_field_secret_access_key.snap  browser_tests__focus_field_snapshot_list.snap  browser_tests__input_mode_editing.snap  browser_tests__input_mode_normal.snap  browser_tests__popup_state_confirm_cancel.snap  browser_tests__popup_state_confirm_restore.snap  browser_tests__popup_state_confirm_restore.snap.new  browser_tests__popup_state_downloading.snap  browser_tests__popup_state_error.snap  browser_tests__popup_state_hidden.snap  browser_tests__popup_state_success.snap  browser_tests__postgres_config.snap  browser_tests__qdrant_config.snap  browser_tests__qdrant_config.snap.new  browser_tests__restore_target_elasticsearch.snap  browser_tests__restore_target_postgres.snap  browser_tests__restore_target_postgres.snap.new  browser_tests__restore_target_qdrant.snap  browser_tests__s3_config.snap  renderer_tests__centered_rect_40_30.snap  renderer_tests__centered_rect_60_10.snap  renderer_tests__centered_rect_80_20.snap  renderer_tests__horizontal_layout.snap  renderer_tests__pg_settings_chunks.snap  (+2 more)
(+12 files in other folders)
