[package]
name = "rustored"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
aws-config = "0.55.0"
aws-sdk-s3 = "0.26.0"
ratatui = "0.20.0"
ratatui-splash-screen = "0.1"
crossterm = "0.27"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
elasticsearch = { version = "8.15.0-alpha.1", features = ["native-tls"] }
qdrant-client = "1.13.0"
anyhow = "1.0"
dotenvy = "0.15"
dirs = "5.0"
clap = { version = "4.3", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"

[dev-dependencies]
mockall = "0.11"
serial_test = "0.5"
