[package]
name = "rustored"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
log4rs = "1.2"
tempfile = "3.10.1"
clap = { version = "4.4.11", features = ["derive", "env"] }
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
elasticsearch = "8.17.0-alpha.1"
qdrant-client = "1.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.26.0"
crossterm = "0.27.0"
aws-config = "1.1.5"
chrono = "0.4.35"
humansize = "2.1.3"
aws-sdk-s3 = "1.12.0"
tokio-stream = "0.1.14"
futures-util = "0.3.31"
dotenvy = "0.15.7"
random_word = { version = "0.5.0", features = ["en"] }

[dev-dependencies]
insta = "1.42.2"
